--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
     <div class="profile-pic-container">
         <img class="profile-pic" src="https://soccerpointeclaire.com/wp-content/uploads/2021/06/default-profile-pic-e1513291410505.jpg" alt="profile">
     </div>
-    <h3>{{this.userservice.getUser()?.email}}</h3>
+    <h3>{{this.userservice.getUserName()}}</h3>
     <div class="button-div">
     <button type = button (click)="userservice.logout()"> Logout</button>
     </div>
