--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Elektronikus Csevegő tér</h1>
+<h1>Elektronikus Csevegő Tér</h1>
 <div>
   <ng-container *ngIf="!this.userservice.load; else loading">
     <ng-container *ngIf="screen=='nagy'; else mobile">
