--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,7 @@ h2, h3 {
 
   a{
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
   }
   .error-message{
     font-family: Arial, Helvetica, sans-serif;
@@ -78,4 +79,4 @@ h2, h3 {
     background-color: #cfd8dc;
   }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; padding-left: 1em; padding-right: 1em;}
