--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,5 +1,8 @@
 .profile-pic{
     border-radius: 50%;
+    border: solid dodgerblue 4px;
+    width: 8em;
+    height: 8em;
 }
 
 .profile-pic-container{
