own posts on the right

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,7 +1,11 @@
 <div [className]="me?'me':'not_me'">
-<img [src]="picurl" class="small-pic">{{name}}
+    <div>
+        <div class="pic-con">
+            <img [src]="picurl" class="small-pic">{{name}}
+        </div>
     <div class="message">
         <p>{{post.content}}</p>
+    </div>
     </div>
 </div>
 <br/>
