--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -18,6 +18,6 @@
     </ng-template>
 
     <div class="button-div">
-    <button type = button (click)="userservice.logout()"> Logout</button>
+    <button type = button (click)="userservice.logout()">Kijelentkezés</button>
     </div>
 </div>
