--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -1,19 +1,18 @@
 .message{
     border: solid lightblue 2px;
     border-radius: 5px;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding: 0.5em;
     width: max-content;
     margin: 1px;
 }
 .me, .me .pic-con{
     display: flex;
+    padding-right: 1em;
     flex-direction: row;
     justify-content: flex-end;
 }
 
 .me .message{
-    
     background-color: darkblue;
     color: white;
 }
@@ -23,4 +22,10 @@
     height: 1em;
     border-radius: 50%;
     border: solid dodgerblue 2 px;
+}
+
+.emoji{
+    width: 2em;
+    height: 2em;
+    border-radius: 20%;
 }
