--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h3>Felhasználónév</h3>
+    <h3>Email-cím</h3>
     <input type="text" [(ngModel)]="username"/>
     <h3>Jelszó</h3>
     <input type="password"[(ngModel)]="password"/>
